# python-package-template

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: tests-lint.yaml
tests/: test_template.py
{{ cookiecutter.project_slug }}/: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: CODEOWNERS
{{ cookiecutter.project_slug }}/.github/workflows/: release.yaml  tag-on-label.yaml  tests-lint-docs-build.yaml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.__project_slug_underscore }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_main.py  test_version.py
