[project]
name = "python-package-template"
description = "Python Package Template"
authors = [
    {name = "Stanislav Khrapov", email = "khrapovs@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.10"
dependencies = [
    "cookiecutter",
    "pytest-cookies"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/khrapovs/python-package-template"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-cookies"
]
dev = [
    "pre-commit"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools_scm]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "D", "B", "I", "ARG"]
target-version = "py311"
include = ["tests"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D213", "D417"]

[tool.mypy]
ignore_missing_imports = true
install_types = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
non_interactive = true
no_strict_optional = true
